@@ -1,3 +1,9 @@
+2014-01-06  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/pr59350.c: Tweak.
+	* gcc.dg/pr59350-2.c: New test.
+	* g++.dg/pr59510.C: Likewise.
+
 2014-01-06  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/59023
